--- a/Deyga-1/src/main/resources/application.properties
+++ b/Deyga-1/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8080
 #spring.mvc.view.prefix=/Prabhu/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://localhost:3306/qddb
+spring.datasource.url=jdbc:mysql://localhost:3306/deyga
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
